--- a/grafy/grafy.htm
+++ b/grafy/grafy.htm
@@ -27,6 +27,44 @@
     flex-wrap: wrap;
 }
 
+.highcharts-figure, .highcharts-data-table table {
+    min-width: 320px;
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #EBEBEB;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+.highcharts-data-table td, .highcharts-data-table th, .highcharts-data-table caption {
+    padding: 0.5em;
+}
+.highcharts-data-table thead tr, .highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
+}
+
+#csv {
+    display: none;
+}
+
 </style>
 
 </head>
@@ -41,14 +79,18 @@
 
 <div style="width: 1000px; height: 500px;" id="absence"></div>
 
+<div style="width: 800px; height: 800px;" id="kdoskym"></div>
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+<script type="text/javascript" src="https://code.highcharts.com/modules/sankey.js"></script>
+<script type="text/javascript" src="https://code.highcharts.com/modules/dependency-wheel.js"></script>
 
 <script type="text/javascript">
 
 var colors = ['#b80058','#ebac23','#008cf9','#006e00','#00bbad','#d163e6','#b24502','#ff9287', '#5954d6', '#00c6f8', '#878500', '#00a76c', '#bdbdbd'];
 
-var vysledek = ['Přednesené', 'Nepřítomen', 'Propadlé', 'Zrušené', 'Aktuální'];
+var vysledek = ['Přítomen', 'Nepřítomen', 'Propadlé', 'Zrušené', 'Aktuální'];
 
 var celkem = [
   {y: 38, abs: 638},
@@ -86,6 +128,198 @@ var nezn = [6.9,8.7,7.7,10.0,8.3,0.0,7.8,0.0,15.0,0.8,55.7];
 
 var absenteri = ['Robert Plaga, MŠMT (ANO)', 'Jan Hamáček, MZV (ČSSD)', 'Miroslav Toman, MZe. (nestr.)', 'Jana Maláčová, MPSV (ČSSD)', 'Andrej Babiš, premiér (ANO)', 'Vladimír Kremlík, MD (nestr.)', 'Richard Brabec, MŽP (ANO)', 'Dan Ťok, MD (nestr.)', 'Alena Schillerová, MF (nestr.)', 'Adam Vojtěch, MZ (nestr.)', 'Karel Havlíček, MP (nestr.)'];
 
+var kdoskym =
+[
+  [1,1,0],
+  [2,2,0],
+  [3,3,0],
+  [4,4,0],
+  [5,5,0],
+  [6,6,0],
+  [7,7,0],
+  [8,8,0],
+  [9,9,0],
+  [10,1,38],
+  [10,2,26],
+  [11,1,24],
+  [12,3,22],
+  [13,1,22],
+  [14,1,21],
+  [15,4,21],
+  [12,1,19],
+  [16,5,18],
+  [17,3,17],
+  [18,6,16],
+  [10,4,16],
+  [19,7,15],
+  [18,1,14],
+  [20,1,14],
+  [21,1,13],
+  [12,4,13],
+  [22,1,12],
+  [23,1,12],
+  [10,8,12],
+  [24,1,11],
+  [11,6,11],
+  [25,2,11],
+  [26,1,10],
+  [27,1,10],
+  [28,1,10],
+  [22,9,10],
+  [29,4,10]
+];
+
+var uzle = [
+{
+    "id": 1,
+    "short": "Babiš",
+    "name": "Andrej Babiš"
+},
+{
+    "id": 2,
+    "short": "Schillerová",
+    "name": "Alena Schillerová"
+},
+{
+    "id": 3,
+    "short": "Maláčová",
+    "name": "Jana Maláčová"
+},
+{
+    "id": 4,
+    "short": "Vojtěch",
+    "name": "Adam Vojtěch"
+},
+{
+    "id": 5,
+    "short": "Brabec",
+    "name": "Richard Brabec"
+},
+{
+    "id": 6,
+    "short": "Ťok",
+    "name": "Dan Ťok"
+},
+{
+    "id": 7,
+    "short": "Plaga",
+    "name": "Robert Plaga"
+},
+{
+    "id": 8,
+    "short": "Hamáček",
+    "name": "Jan Hamáček"
+},
+{
+    "id": 9,
+    "short": "Havlíček",
+    "name": "Karel Havlíček"
+},
+{
+    "id": 10,
+    "short": "Kovářová",
+    "name": "Věra Kovářová"
+},
+{
+    "id": 11,
+    "short": "Feri",
+    "name": "Dominik Feri"
+},
+{
+    "id": 12,
+    "short": "Richterová",
+    "name": "Olga Richterová"
+},
+{
+    "id": 13,
+    "short": "Langšádlová",
+    "name": "Helena Langšádlová"
+},
+{
+    "id": 14,
+    "short": "Michálek",
+    "name": "Jakub Michálek"
+},
+{
+    "id": 15,
+    "short": "Kaňkovský",
+    "name": "Vít Kaňkovský"
+},
+{
+    "id": 16,
+    "short": "Balcarová",
+    "name": "Dana Balcarová"
+},
+{
+    "id": 17,
+    "short": "Golasowská",
+    "name": "Pavla Golasowská"
+},
+{
+    "id": 18,
+    "short": "Jurečka",
+    "name": "Marian Jurečka"
+},
+{
+    "id": 19,
+    "short": "Bartoň",
+    "name": "Lukáš Bartoň"
+},
+{
+    "id": 20,
+    "short": "Adamová",
+    "name": "Markéta Pekarová Adamová"
+},
+{
+    "id": 21,
+    "short": "Valenta",
+    "name": "Jiří Valenta"
+},
+{
+    "id": 22,
+    "short": "Munzar",
+    "name": "Vojtěch Munzar"
+},
+{
+    "id": 23,
+    "short": "Fiala",
+    "name": "Petr Fiala"
+},
+{
+    "id": 24,
+    "short": "Kupka",
+    "name": "Martin Kupka"
+},
+{
+    "id": 25,
+    "short": "Ferjenčík",
+    "name": "Mikuláš Ferjenčík"
+},
+{
+    "id": 26,
+    "short": "Bartoš",
+    "name": "Ivan Bartoš"
+},
+{
+    "id": 27,
+    "short": "Blaha",
+    "name": "Stanislav Blaha"
+},
+{
+    "id": 28,
+    "short": "Maříková",
+    "name": "Karla Maříková"
+},
+{
+    "id": 29,
+    "short": "Třešňák",
+    "name": "Petr Třešňák"
+}
+]
+
+var share = [190, 30, 40, 48, 16, 26, 16, 14, 14, 80, 30, 44, 22, 21, 21, 18, 17, 28, 15, 16, 15, 20, 14, 12, 12, 12, 12, 12, 14];
+
+// [230, 37, 39, 60, 18, 27, 15, 12, 10, 92, 35, 54, 22, 21, 21, 18, 17, 30, 15, 14, 13, 22, 12, 11, 11, 10, 10, 10, 10];
 
 Highcharts.chart('celkem', {
     chart: {
@@ -238,7 +472,7 @@ Highcharts.chart('absence', {
     },
 
     title: {
-        text: 'Absence při interpelacích'
+        text: 'Účast na interpelacích'
     },
 
     subtitle: {
@@ -251,7 +485,7 @@ Highcharts.chart('absence', {
 
     yAxis: {
         title: {
-            text: 'podíl absencí'
+            text: 'podíl interpelací'
         },
         labels: {
             formatter: function () {
@@ -299,6 +533,159 @@ Highcharts.chart('absence', {
         color: colors[7],
         visible: false
     }]
+});
+
+Highcharts.setOptions({
+  colors: ['#000', '#111', '#222', '#333', '#444', '#555', '#666', '#777', '#888', '#e6194b', '#3cb44b', '#ffe119', '#4363d8', '#f58231', '#911eb4', '#46f0f0', '#f032e6', '#bcf60c', '#fabebe', '#008080', '#e6beff', '#9a6324', '#800000', '#aaffc3', '#808000', '#ffd8b1', '#000075', '#e6194b', '#3cb44b']
+});
+
+Highcharts.chart('kdoskym', {
+
+    title: {
+        text: 'Duely'
+    },
+
+        subtitle: {
+        text: 'poslanci s nejméně 10 interpelacemi na jednoho ministra<br/>poslanci barevně, ministři odstíny šedi'
+    },
+
+
+    accessibility: {
+        point: {
+            valueDescriptionFormat: '{index}. From {point.from} to {point.to}: {point.weight}.'
+        }
+    },
+
+    tooltip: {
+        nodeFormat: '{point.name}<br/>'
+    },
+
+    exporting: {
+        enabled: false
+    },
+
+    credits: {
+        href: 'https://www.psp.cz/sqw/interp.sqw?o=8',
+        text: 'Zdroj: PS PČR'
+    },
+
+    series: [{
+        size: '70%',
+        keys: ['from', 'to', 'weight'],
+        data: kdoskym,
+        nodes: uzle,
+        type: 'dependencywheel',
+        name: 'Duely',
+        dataLabels: {
+            enabled: false
+        },
+
+    }, {
+
+        type: 'pie',
+        size: '70%',
+        tooltip: {
+            headerFormat: '<span style="font-size: 10px">Duely</span><br/>',
+            pointFormat: '{point.name}<br/>'
+        },
+        data: [{
+            y: share[0],
+            name: uzle[0].short,
+        }, {
+            y: share[1],
+            name: uzle[1].short,
+        }, {
+            y: share[2],
+            name: uzle[2].short,
+        }, {
+            y: share[3],
+            name: uzle[3].short,
+        }, {
+            y: share[4],
+            name: uzle[4].short,
+        }, {
+            y: share[5],
+            name: uzle[5].short,
+        }, {
+            y: share[6],
+            name: uzle[6].short,
+        }, {
+            y: share[7],
+            name: uzle[7].short,
+        }, {
+            y: share[8],
+            name: uzle[8].short,
+        }, {
+            y: share[9],
+            name: uzle[9].short,
+        }, {
+            y: share[10],
+            name: uzle[10].short,
+        }, {
+            y: share[11],
+            name: uzle[11].short,
+        }, {
+            y: share[12],
+            name: uzle[12].short,
+        }, {
+            y: share[13],
+            name: uzle[13].short,
+        }, {
+            y: share[14],
+            name: uzle[14].short,
+        }, {
+            y: share[15],
+            name: uzle[15].short,
+        }, {
+            y: share[16],
+            name: uzle[16].short,
+        }, {
+            y: share[17],
+            name: uzle[17].short,
+        }, {
+            y: share[18],
+            name: uzle[18].short,
+        }, {
+            y: share[19],
+            name: uzle[19].short,
+        }, {
+            y: share[20],
+            name: uzle[20].short,
+        }, {
+            y: share[21],
+            name: uzle[21].short,
+        }, {
+            y: share[22],
+            name: uzle[22].short,
+        }, {
+            y: share[23],
+            name: uzle[23].short,
+        }, {
+            y: share[24],
+            name: uzle[24].short,
+        }, {
+            y: share[25],
+            name: uzle[25].short,
+        }, {
+            y: share[26],
+            name: uzle[26].short,
+        }, {
+            y: share[27],
+            name: uzle[27].short,
+        }, {
+            y: share[28],
+            name: uzle[28].short,
+        }],
+        colors: ['none'],
+        borderWidth: 0,
+        dataLabels: {
+            connectorWidth: 0.5,
+            alignTo: 'plotEdges',
+            format: '{point.name}',
+            connectorColor: '#333'
+        }
+    }]
+
 });
 
 </script>
